# getting-your-feet-wet-with-python

./: .gitignore  README.md
lessons/lesson1/: Project_1.ipynb  (+1 more)
projects/tictactoe-app/: .travis.yaml  README.md  pyproject.toml
projects/tictactoe-app/src/: setup.py
projects/tictactoe-app/src/tictactoe/: TicTacToeApp.py  tic_tac_toe_app.py
projects/tictactoe-app/src/tictactoe/adapters/: text_based_user_interface.py  user_interface.py
projects/tictactoe-app/src/tictactoe/adapters/inbound/: user_interactable.py
projects/tictactoe-app/src/tictactoe/common/: ChoiceVerifier.py  MarkerVerifier.py  PositionVerifier.py  choice_verifier.py  marker_verifier.py  position_verifier.py
projects/tictactoe-app/src/tictactoe/domain/: constants.py  exceptions.py
projects/tictactoe-app/src/tictactoe/domain/gameboard/: GameBoard.py  board_type_mappings.py  game_board.py  win_condition_calculator.py
projects/tictactoe-app/src/tictactoe/domain/players/: HumanPlayer.py  Player.py  RobotPlayer.py  advanced_robot_player.py  human.py  human_player.py  minimax_robot.py  player.py  robot.py  robot_player.py
projects/tictactoe-app/src/tictactoe/infrastructure/views/: text_based_user_interface.py
projects/tictactoe-app/src/tictactoe/ports/inbound/: user_interactable.py
projects/tictactoe-app/src/tictactoe/ports/outbound/: displayable.py
projects/tictactoe-app/test/: choice_verifier_test.py  game_board_test.py  marker_verifier_test.py  position_verifier_test.py  robot_player_test.py  text_based_user_interface_test.py  tic_tac_toe_app_test.py  win_condition_calculator_test.py
(+22 files in other folders)
